# emfcamp-2022

./: README.md  update-schedule.sh
.github/workflows/: ci.yml
ansible/: README.md  cloud.yml  controller.yml  dapnet-modem.yml  dapnet_modem.yml  inventory.ini  modem.yml  printer.yml  requirements.yml
ansible/files/: printer-serial-bridge.openrc  remote-closedown.openrc  unipager-status-mqtt.openrc  unipager.openrc
ansible/files/schedule/: dapnet.txt  printer.txt
ansible/group_vars/all/: all.yml
ansible/group_vars/modem/: firewall.yml
ansible/group_vars/printer/: firewall.yml
ansible/templates/: printer-serial-bridge.toml  remote-closedown.toml  unipager-status-mqtt.toml  unipager.json
ansible/templates/k8s/: matrix-remote-closedown.yml  mqtt-actor.yml  mqtt.yml  namespace.yml  printer-controller.yml  rubric-publisher.yml
config-generator/: Cargo.toml
config-generator/src/: main.rs
config-generator/src/generator/: dapnet_rubric.rs  mod.rs  mqtt_actor.rs  printer.rs
config-generator/src/schedule/: films.rs  main_events.rs  mod.rs  venue.rs
mb7pmf/: case.FCStd
printer-controller/: Containerfile  setup.cfg
printer-controller/src/printer_controller/: __init__.py  formatters.py  mqtt_printer.py
