[package]
name = "config-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
itertools = "0.10.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
url = { version = "2.2.2", features = ["serde"] }
