[metadata]
name = printer_controller
version = 0.1.0
author = Dan Nixon
author_email = dan@dan-nixon.com
description = A small example package
url = https://github.com/DanNixon/emfcamp-2022
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    escpos
    paho-mqtt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        printer-controller = printer_controller:main
